# Rag-project-1

./: .dockerignore  .gitignore  README.md  app.py  dockerfile  main.py  pyproject.toml  requirements.txt
notebook/data/text_files/: machine_learning.txt  python_intro.txt
notebook/data/vector_store/3cbf0365-e7e8-4109-87ba-e2fa1d6456c5/: index_metadata.pickle
src/api/: routes.py
src/config/: seting.py
src/data_chunk/: data_chunk.py
src/data_embedding/: data_embed.py
src/data_ingestion/: data_ingest.py
src/llm_output/: llm.py
src/pipeline/: pipeline.py  query_pipeline.py
src/retrival/: retrival.py
src/utils/: hash_registery.py  logger.py
src/vector_store/: vector_store.py
