[project]
name = "rag-project-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.7",
    "faiss-cpu>=1.13.2",
    "ir>=0.0.6",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.28",
    "pymupdf>=1.27.2.2",
    "pypdf>=6.10.0",
    "sentence-transformers>=5.4.0",
    "typesense>=2.0.0",
]
